Fix horizontal scroll bug

--- a/src/instruments/layouts/Header/styles.scss
+++ b/src/instruments/layouts/Header/styles.scss
@@ -18,14 +18,13 @@
 
 .hr {
   background: linear-gradient(to right, $gray0 2rem, $gray 15%, $gray0);
-  width: 100%;
   height: 1px;
   &:after {
     margin-top: 1px;
     position: absolute;
     content: '';
     background: linear-gradient(to right, $gray0, $lightGray 15%, $gray0);
-    width: 100%;
+
     height: 1px;
   }
 }
